@@ -65,6 +65,8 @@ class HTMLTranslator(BaseTranslator):
             self.permalink_text = self.permalink_text and u'\u00B6' or ''
         self.permalink_text = self.encode(self.permalink_text)
         self.secnumber_suffix = builder.config.html_secnumber_suffix
+        self.param_separator = ''
+        self._table_row_index = 0
 
     def visit_start_of_file(self, node):
         # only occurs in the single-file builder
